--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ title: Tech Tree Interactive Demo
 email: boru.design@gmail.com
 description: Tech Tree Interactive Demo @ Stitch Fix
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yorthehunter.github.io/" # the base hostname & protocol for your site
-baseurl: "tech-tree-test"
+url: "http://yorthehunter.github.io" # the base hostname & protocol for your site
+baseurl: "/tech-tree-test"
 twitter_username: yor_the_hunter
 github_username:  yorthehunter
 
